--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -7,4 +7,8 @@
         <LangVersion>10</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Data.SQLite" Version="1.0.116" />
+    </ItemGroup>
+
 </Project>
