--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,24 @@ services:
   api-1:
     build:
       context: .
-      dockerfile: "API/Dockerfile"
+      dockerfile: "Prime/Dockerfile"
     ports:
     - "8071:80"
     volumes:
-    - "C:/Users/nbruu/data/data:/data"
-  web:
+    - "C:/Hewr/data:/data"
+  api-2:
     build:
       context: .
-      dockerfile: "API/Dockerfile"
+      dockerfile: "Prime/Dockerfile"
     ports:
-    - "8070:80"
+    - "8072:80"
+    volumes:
+    - "C:/Hewr/data1:/data1"
+  api-3:
+    build:
+      context: .
+      dockerfile: "Prime/Dockerfile"
+    ports:
+    - "8073:80"
+    volumes:
+    - "C:/Hewr/data2:/data2"
