--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
     - "8071:80"
     volumes:
-    - "C:/Users/nbruu/data/data:/data"
+    - "C:/Hewr/data:/data"
   api-2:
     build:
       context: .
@@ -15,7 +15,7 @@ services:
     ports:
     - "8072:80"
     volumes:
-    - "C:/Users/nbruu/data/data:/data"
+    - "C:/Hewr/data:/data"
   api-3:
     build:
       context: .
@@ -23,4 +23,4 @@ services:
     ports:
     - "8073:80"
     volumes:
-    - "C:/Users/nbruu/data/data:/data"
+    - "C:/Hewr/data:/data"
