--- a/ConsoleSearch/ConsoleSearch.csproj
+++ b/ConsoleSearch/ConsoleSearch.csproj
@@ -15,4 +15,7 @@
 		<PackageReference Include="SQLitePCLRaw.core" Version="2.0.7" />
 		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.2" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\Loadbalancing\Loadbalancing.csproj" />
+	</ItemGroup>
 </Project>
