--- a/.github/workflows/gitaction.yml
+++ b/.github/workflows/gitaction.yml
@@ -1,13 +1,14 @@
-name: .NET Core
+name: gitaction
 
 on:
   push:
-    branches: [ develop** ]
+    branches: [ main, develop** ]
   pull_request_target:
     branches: [ main, develop ]
 
 jobs:
   build:
+    name: running unittest
 
     runs-on: ubuntu-latest
 
@@ -17,10 +18,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.301
-    - name: Install dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal
-
+        
+    
+    - run: npm ci
+    - run: npm run  build --if-present
+    - run: npm test
